# boomerang

./: .clang-format  README.md  meson.build  uk.co.matbooth.Boomerang.json
data/: boomerang.spec.in  meson.build  uk.co.matbooth.Boomerang.desktop.in  uk.co.matbooth.Boomerang.metainfo.xml.in
extension/data/: meson.build  org.gnome.shell.extensions.boomerang.gschema.xml
extension/src/: extension.js  meson.build  metadata.json  metadata.json.in
images/: boomerang-logo.xcf
po/: LINGUAS  POTFILES  boomerang.pot  en_GB.po  fr.po  meson.build
src/: boomerang-application.c  boomerang-application.h  boomerang-canvas.c  boomerang-canvas.h  boomerang-screenshot.c  boomerang-screenshot.h  gresource.xml  main.c  meson.build
src/shaders/: fragment.glsl  vertex.glsl
